Fix typos in documentation

--- a/mini-project-1/src/mini-project-1.ipynb
+++ b/mini-project-1/src/mini-project-1.ipynb
@@ -5844,11 +5844,11 @@
    "metadata": {},
    "source": [
     "### Conlusion\n",
-    "Observing the results by running the K-mean clustering on the mixed digit-class pattern dataset, we notice that the digits that share certain similarities, such as slightly tilted to the left or the right tend to belong to cluster together.  \n",
+    "Observing the results by running the K-mean clustering on the mixed digit-class pattern dataset, we notice that the digits that share certain similarities, such as slightly tilted to the left or to the right, tend to cluster together.  \n",
     "\n",
-    "More intesteringly, certain digits like `zero`, `five`, `six`, `eight`, and `nine` are really close in terms of shape. That is, given a digit pattern from the mentioned set, a classifier might misclassify the class-digit. For instance, the digit-pattern might have the shape of a `five` and the output results an `eight` when the true value is a `six`. That's definitely a closely-alike shape issue.\n",
+    "More interestingly, certain digits like `zero`, `five`, `six`, `eight`, and `nine` are really close in terms of shape. That is, given a digit-pattern from the mentioned set, a classifier might misclassify the class-digit. For instance, the digit-pattern might have the shape of a `five` and the output results an `eight` when the true value is a `six`. That's definitely a closely-alike shape issue.\n",
     "\n",
-    "Also when we run the K-means algorithm for K = 20, we observe from the visualizations that based on the closely-alike shape issue mentioned above, digits like `seven`, `zeros`, and `four` are hardly misclassified. However, pair digits like `six-eight`, `seven-nine` for example, share certain similarities in the ending tail. That can constitute also a huge headache for the classifier. "
+    "Also when we run the K-means algorithm for K = 20, we observe from the visualizations that based on the closely-alike shape issue mentioned above, digits like `seven`, `zeros`, and `four` are hardly misclassified. However, pair digits like `six-eight`, `seven-nine` for example, share certain similarities in the ending tail. That can constitute also a huge headache for the classifier."
    ]
   }
  ],
