Modularize mini-project-1 script for reusability

--- a/mini-project-2/src/mini-project-2.ipynb
+++ b/mini-project-2/src/mini-project-2.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Machine Learning - Spring 2019\n",
-    "\n",
-    "## Mini-Project II\n",
+    "#  Machine Learning - Mini Project II\n",
     "\n",
     "### Learning Algorithm: Classifier\n",
     "\n",
@@ -27,7 +25,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mini project one is imported\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" Learning Algorithm: Classifier \"\"\"\n",
     "\n",
@@ -40,204 +46,13 @@
     "\n",
     "\n",
     "# Import relevant libraries\n",
+    "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from copy import deepcopy\n",
     "\n",
-    "\n",
-    "### START: scripts\n",
-    "PATTERN_SIZE = 200 # predefined number of class patterns available\n",
-    "\n",
-    "def get_data_points(digit = -1):\n",
-    "    \"\"\" Get a specific subset of data points from the multi-feature digit dataset\n",
-    "    \n",
-    "    This dataset consists of features of handwritten numerals (`0'--`9')\n",
-    "    extracted from a collection of Dutch utility maps. 200 patterns per\n",
-    "    class (for a total of 2,000 patterns) have been digitized in  binary\n",
-    "    images.\n",
-    "    \n",
-    "    Read more in the :ref:`../assets/mfeat.info`.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    digit: int, default = -1\n",
-    "        The digit-class pattern between zero(0) and nine(9) \n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    data_points: array\n",
-    "        The data points of the class pattern of the specified digit\n",
-    "        If no specified digit, it returns the entire data points\n",
-    "    \"\"\"\n",
-    "    filepath = './assets/mfeat-pix.txt'\n",
-    "    data_points = np.loadtxt(filepath)\n",
-    "    \n",
-    "    if(digit >= 0 and digit <= 9):\n",
-    "        START = digit * PATTERN_SIZE\n",
-    "        END   = START + PATTERN_SIZE\n",
-    "        return data_points[START:END] \n",
-    "    return data_points # numpy.ndarray([ points[], ..., N])\n",
-    "\n",
-    "\n",
-    "def assign_randomly(data, K):\n",
-    "    \"\"\" Group a given dataset by K-shuffled-groups  \n",
-    "    \n",
-    "    Using the helper function `numpy.random.shuffle()` to randomly shuffle\n",
-    "    the array-like dataset, assign every point to a K-group.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data: array of shape(n_samples)\n",
-    "        The digit-class pattern between zero(0) and nine(9) \n",
-    "    K: int\n",
-    "        Number of desired groups. K cannot be bigger the number of rows of\n",
-    "        the given sample. If yes, K will be reshaped to the very size of \n",
-    "        the sample.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    data: array of {array-like, sparse matrix} shape = [k_groups, n_data_points]\n",
-    "        The set of groups containing a subset of data points\n",
-    "        such as: arr(data[ arr(groups[ arr(points),..., n]), ..., K])\n",
-    "    \"\"\"\n",
-    "    np.random.shuffle(data)\n",
-    "    if K > len(data): # protect array\n",
-    "        K = len(data)\n",
-    "    return np.array([ data[i::K] for i in range(K) ])\n",
-    "\n",
-    "\n",
-    "def to_list(nested_array):\n",
-    "    \"\"\" Convert nested arrays into nested lists\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    nested_array: array of arrays\n",
-    "        The set of arrays to be converted\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    data: list\n",
-    "        The converted-into-list data\n",
-    "    \"\"\"\n",
-    "    if not isinstance(nested_array, np.ndarray):\n",
-    "        return nested_array\n",
-    "    return [ to_list(arr) for arr in nested_array ]\n",
-    "\n",
-    "\n",
-    "def to_array(nested_list):\n",
-    "    \"\"\" Convert nested lists into nested arrays\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    nested_list: list of lists\n",
-    "        The set of lists to be converted\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    data: array {numpy.ndarray}\n",
-    "        The converted-into-array data\n",
-    "    \"\"\"\n",
-    "    if not isinstance(nested_list, list):\n",
-    "        return nested_list\n",
-    "    return np.array([ to_array(l) for l in nested_list ])\n",
-    "\n",
-    "\n",
-    "def get_codebooks(clusters):\n",
-    "    \"\"\" Get the codebook vector image from the set of clusters\n",
-    "    \n",
-    "    This function computes the mean of each cluster and assign\n",
-    "    each codebook accordingly to form an array of shape(K_codebooks).\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    clusters:  array of shape(K_clusters)\n",
-    "        The set of K-codebook images from the clusters\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    data: array of shape (K_codebooks)\n",
-    "        The set of codebooks computed from each cluster\n",
-    "    \"\"\"\n",
-    "    return np.array([ np.mean(c, axis=0) for c in clusters])\n",
-    "    \n",
-    "\n",
-    "def k_mean(data, K = 1):\n",
-    "    \"\"\" Compute the K-Means clustering Machine Learning Algorithm\n",
-    "    \n",
-    "    This basically groups data points into K-clusters based on their\n",
-    "    similarities.\n",
-    "    \n",
-    "    Read more in the :ref:`http://minds.jacobs-university.de/uploads/teaching/lectureNotes/LN_ML4IMS.pdf`.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data: array-like, shape([n_samples, m_features])\n",
-    "        The data points to be clustered\n",
-    "    K: int\n",
-    "        The number of desired clusters\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    clusters: array {numpy.ndarray}\n",
-    "        The k-clustered subsets of data points containing similar traits\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # K random positions to assign Set of clusters Sj\n",
-    "    clusters = assign_randomly(data, K)\n",
-    "    \n",
-    "    # Iterate over the Sj while computing Modulus(xi − µj) \n",
-    "    while True:\n",
-    "        clone_clusters = [[] for i in range(K)] # clone clusters: list\n",
-    "        \n",
-    "        for point in data:\n",
-    "            distances = [] # between data points and mean cluster\n",
-    "            for j in range(K):\n",
-    "                # compute mean of the cluster: codebook vector\n",
-    "                mean_cluster = np.mean(clusters[j], axis=0)\n",
-    "                \n",
-    "                # compute distance between data point and mean cluster \n",
-    "                distance = np.linalg.norm(point - mean_cluster)\n",
-    "                distances.append(distance)\n",
-    "                \n",
-    "            # Put point into the cluster where the distance is minimal \n",
-    "            which_cluster = distances.index( min(distances) )\n",
-    "            clone_clusters[ which_cluster ].append( list(point) )\n",
-    "        \n",
-    "        # remove cluster if it is empty\n",
-    "        for cluster in clone_clusters:\n",
-    "            if not cluster:\n",
-    "                clone_clusters.remove(cluster)\n",
-    "                K -= 1\n",
-    "        \n",
-    "        # check if sets remain unchanged \n",
-    "        if clone_clusters == to_list(clusters): break\n",
-    "            \n",
-    "        # update to optimal clusters\n",
-    "        clusters  = to_array( deepcopy(clone_clusters) )\n",
-    "        \n",
-    "    return clusters\n",
-    "\n",
-    "\n",
-    "def plot_figure(dataset):\n",
-    "    \"\"\" Plot the set of image vectors\n",
-    "    \n",
-    "    This basically reshapes every vector image into 15x16 Matrix-sized\n",
-    "    set and plot the image in a 11x6.5-in figure.\n",
-    "    \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    dataset: array of data points\n",
-    "        The data points representing the class pattern images\n",
-    "    \"\"\"\n",
-    "    n_vectors = len(dataset)\n",
-    "        \n",
-    "    fig = plt.figure(figsize=(11, 6.5))\n",
-    "    for i in range(n_vectors):\n",
-    "        graph = fig.add_subplot(10, 20, i + 1)\n",
-    "        graph.imshow(dataset[i].reshape(16, 15), cmap='binary')\n",
-    "        graph.axis('off')\n",
-    "    plt.show()"
+    "sys.path.append('./assets/')\n",
+    "from miniprojectone import get_data_points, k_means\n",
+    "\n"
    ]
   },
   {
