Split dataframe into training and testing data

--- a/mini-project-2/src/mini-project-2.ipynb
+++ b/mini-project-2/src/mini-project-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,29 @@
     "    return encoded\n",
     "\n",
     "\n",
+    "def split_data(dataframe):\n",
+    "    \"\"\" Split data frame into training and testing data\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataframe: array-like (n_samples, m_features)\n",
+    "        2000 digit patterns x 240 features and 10 one-hot encoded class labels\n",
     "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    encoded: list\n",
+    "        list containing array of training and array of testing data\n",
+    "    \"\"\"\n",
+    "    digits = np.array_split(dataframe, 10)\n",
+    "    \n",
+    "    train_data, test_data = [], []\n",
+    "\n",
+    "    for digit in digits:\n",
+    "        train_data.extend(digit[:100])\n",
+    "        test_data.extend(digit[100:])\n",
+    "    \n",
+    "    return [np.array(train_data), np.array(test_data)]\n",
+    "    \n",
     "# END: Helper functions"
    ]
   },
@@ -117,18 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2000, 250)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2000, 250) (1000, 250) (1000, 250)\n"
+     ]
     }
    ],
    "source": [
@@ -136,8 +155,9 @@
     "\n",
     "# Distribute dataframe into training and testing data\n",
     "# WIP\n",
+    "training_data, testing_data = split_data(dataframe)\n",
     "\n",
-    "dataframe.shape"
+    "print(dataframe.shape, training_data.shape, testing_data.shape)"
    ]
   }
  ],
