Apply feature selection using k-means clustering

--- a/mini-project-2/src/mini-project-2.ipynb
+++ b/mini-project-2/src/mini-project-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,35 +43,28 @@
     "import numpy as np\n",
     "\n",
     "sys.path.append('./assets/')\n",
-    "from miniprojectone import get_data_points, k_means\n",
+    "from miniprojectone import get_data_points, k_means, get_codebooks\n",
     "\n",
     "\n",
     "# START: Helper functions\n",
-    "def load_data(one_hot_encoding=False):\n",
+    "def load_data(one_hot_encoding=None):\n",
     "    \"\"\" Load the data and parse (if specified, one-hot encoding) numbered \n",
     "        class labels.\n",
     "        \n",
     "        Parameters\n",
     "        ----------\n",
-    "        one_hot_encoding: bool\n",
+    "        one_hot_encoding: bool, None\n",
     "            determine whether one-hot encoding should be used or not\n",
     "            \n",
     "        Returns\n",
     "        -------\n",
     "        dataframe: array-like (n_samples, m_features)\n",
     "    \"\"\"\n",
-    "    dataframe, k_class = [], 10\n",
-    "    \n",
-    "    for i in range(k_class):\n",
-    "        raw_data = get_data_points(i) # 200-obs x 240-dim\n",
-    "        if i == 0: i = 10 # define \"0\" as class 10\n",
-    "        encoded = one_hot_encode(i) if one_hot_encoding else i\n",
-    "        \n",
-    "        for point in raw_data:\n",
-    "            dataframe.append( np.insert(point, len(point), encoded) )\n",
-    "            \n",
-    "    return np.array(dataframe) # cast as numpy array\n",
-    "\n",
+    "    # load data frame with no class labels defined\n",
+    "    dataframe = get_data_points()\n",
+    "    if one_hot_encoding is None:\n",
+    "        return dataframe\n",
+    "    return inject_label(dataframe, one_hot_encoding)\n",
     "\n",
     "def one_hot_encode(ith, k=10):\n",
     "    \"\"\" Apply one-hot encoding technique for a k-dimensional vector\n",
@@ -101,6 +94,23 @@
     "    return encoded\n",
     "\n",
     "\n",
+    "def inject_label(dataset, one_hot_encoding=False):\n",
+    "    \"\"\" Inject into data frame class labels as numbered or one-hot encoded \n",
+    "    \"\"\"\n",
+    "    dataframe, k_class = [], 10\n",
+    "    digits = np.array_split(dataset, k_class) # split into 10 arrays\n",
+    "    for i in range(k_class):\n",
+    "        digit =  digits[i] # n-obs x k-dim\n",
+    "        if i == 0: \n",
+    "            i = 10 # define \"0\" as class 10\n",
+    "        encoded = one_hot_encode(i) if one_hot_encoding else i\n",
+    "        \n",
+    "        for point in digit:\n",
+    "            dataframe.append( np.insert(point, len(point), encoded) )\n",
+    "            \n",
+    "    return np.array(dataframe) \n",
+    "\n",
+    "\n",
     "def split_data(dataframe):\n",
     "    \"\"\" Split data frame into training and testing data\n",
     "    \n",
@@ -123,7 +133,27 @@
     "        test_data.extend(digit[100:])\n",
     "    \n",
     "    return [np.array(train_data), np.array(test_data)]\n",
+    "\n",
+    "\n",
+    "def select_features(dataset, K=1):\n",
+    "    \"\"\" Apply Euclidean distance between k-means centroid and each point\n",
+    "    to extract k features.\n",
+    "    \"\"\"\n",
+    "    clusters = k_means(dataset, K)\n",
+    "    codebooks = get_codebooks(clusters)\n",
+    "    features = []\n",
+    "    # transfrom xi -> fi by reducing dimensionality from n to k features\n",
+    "    for point in dataset:\n",
+    "        # compute distance between data point and centroid \n",
+    "        feature = [np.linalg.norm(point - c) for c in codebooks]\n",
+    "        features.append( np.array(feature) )\n",
     "    \n",
+    "    return np.array(features)\n",
+    "\n",
+    "def linear_regressor(alpha=0):\n",
+    "    weights = []\n",
+    "    return weights\n",
+    "\n",
     "# END: Helper functions"
    ]
   },
@@ -139,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -154,10 +184,72 @@
     "dataframe = load_data(one_hot_encoding=True)\n",
     "\n",
     "# Distribute dataframe into training and testing data\n",
-    "# WIP\n",
     "training_data, testing_data = split_data(dataframe)\n",
     "\n",
     "print(dataframe.shape, training_data.shape, testing_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature selection\n",
+    "\n",
+    "Let's use K-means clustering algorithm to select relevant features in the training data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2000, 240) (1000, 19)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "        \n",
+    "raw_dataframe = load_data()\n",
+    "raw_training_data, raw_testing_data = split_data(raw_dataframe)\n",
+    "\n",
+    "selected_features = select_features(raw_training_data, 20)\n",
+    "print(raw_dataframe.shape, selected_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 29)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_labels = inject_label(selected_features, one_hot_encoding=True)\n",
+    "features_labels.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classifier: Linear Regression\n",
+    "\n",
+    "Let's compute the linear regression weights with a trailing 1 as bias\n",
+    "\n"
    ]
   }
  ],
